[GEOS-11090] Use Catalog streaming API in WorkspacePage
Make webui's `WorkspaceProvider` use streaming catalog access